fixed game code css for initial screen  with scroll bars and fixed a bug with the shifted canvas

--- a/client/style.css
+++ b/client/style.css
@@ -1,8 +1,6 @@
-
 #canvas1 {
-    position: fixed;
+  position: absolute;
 }
-
 
 #gameScreen {
   display: none;
@@ -15,7 +13,7 @@
   align-items: center;
   text-align: center;
   min-height: 100vh;
-  
+
   width: 400px;
   height: 200px;
   margin-left: auto;
@@ -24,10 +22,18 @@
 
 #initialScreen {
   background-color: gray;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+body {
+  overflow-y: hidden; /* Hide vertical scrollbar */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
 .btn {
   background-color: green;
   color: white;
 }
-
